add class back C

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
            
             <li onclick="insert('0')">0</li>
             <li onclick="insert('.')">,</li>
-            <li style='background: #a35252;' onclick="back()">c</li>
+            <li class="back" onclick="back()">c</li>
             <li class="operadores" onclick="calcularResultado()">=</li>
         </ul>
     </div>
